--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>LOTEAT</title>
+</head>
+<body>
+    <h1>LOTEAT的个人主页</h1>
+    <h1>Hello ~</h1>
+</body>
+</html>
